[gd_scene load_steps=4 format=3 uid="uid://xf7acnm120e3"]

[ext_resource type="Script" uid="uid://4b3jlc64ote0" path="res://Escenas/jugador.gd" id="1_i8vih"]
[ext_resource type="Texture2D" uid="uid://c11lxmog42urw" path="res://Sprites/knight.png" id="2_qgqwx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(40, 69)

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_i8vih")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(5, 13)
scale = Vector2(4, 4)
texture = ExtResource("2_qgqwx")
region_enabled = true
region_rect = Rect2(8, 8, 16, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(5, 8.5)
shape = SubResource("RectangleShape2D_hqtel")

[node name="RayLeft" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(-13.565, 0)
target_position = Vector2(1, -45)

[node name="RayCenter" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(3.87, 0)
target_position = Vector2(1, -45)

[node name="RayRight" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(22.78, 0)
target_position = Vector2(1, -45)
